fixed overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
 
 main {
     flex: 1 0 auto;
+    overflow-x: hidden;
 }
 
 p {
